--- a/index.html
+++ b/index.html
@@ -1,48 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
+
+  <!-- style -->
+  <link rel="stylesheet" href="style.css">
+
+  <!-- fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
   <title>Frontend Mentor | FAQ accordion</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
+
 <body>
+  <div class="container">
+    <main>
+      <img class="pattern-mobile" src="./assets/images/background-pattern-mobile.svg" alt="">
+      <img class="pattern-desktop" src="./assets/images/background-pattern-desktop.svg" alt="">
+      <div class="card">
+        <div class="title">
+          <img class="star" src="./assets/images/icon-star.svg" alt="">
+          <h1>FAQs</h1>
+        </div>
 
-  FAQs
+        <div class="qicon">
+          <p class="question">What is Frontend Mentor, and how will it help me?</p>
+          <img class="plus" src="./assets/images/icon-plus.svg" alt="">
+        </div>
+        <p class="answer">Frontend Mentor offers realistic coding challenges to help developers improve their frontend coding skills with projects in HTML, CSS, and JavaScript. It's suitable for all levels and ideal for portfolio building.</p>
 
-  What is Frontend Mentor, and how will it help me?
+        <hr>
 
-  Frontend Mentor offers realistic coding challenges to help developers improve their 
-  frontend coding skills with projects in HTML, CSS, and JavaScript. It's suitable for 
-  all levels and ideal for portfolio building.
+        <div class="qicon">
+          <p class="question">Is Frontend Mentor free?</p>
+          <img class="plus" src="./assets/images/icon-plus.svg" alt="">
+        </div>
+        <p class="answer">Yes, Frontend Mentor offers both free and premium coding challenges, with the free option providing access to a range of projects suitable for all skill levels.</p>
 
-  Is Frontend Mentor free?
+        <hr>
 
-  Yes, Frontend Mentor offers both free and premium coding challenges, with the free 
-  option providing access to a range of projects suitable for all skill levels.
+        <div class="qicon">
+          <p class="question">Can I use Frontend Mentor projects in my portfolio?</p>
+          <img class="plus" src="./assets/images/icon-plus.svg" alt="">
+        </div>
+        <p class="answer">Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent way to showcase your skills to potential employers!</p>
 
-  Can I use Frontend Mentor projects in my portfolio?
+        <hr>
 
-  Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent
-  way to showcase your skills to potential employers!
-
-  How can I get help if I'm stuck on a Frontend Mentor challenge?
-  
-  The best place to get help is inside Frontend Mentor's Discord community. There's a help 
-  channel where you can ask questions and seek support from other community members.
-
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+        <div class="qicon">
+          <p class="question">How can I get help if I'm stuck on a Frontend Mentor challenge?</p>
+          <img class="plus" src="./assets/images/icon-plus.svg" alt="">
+        </div>
+        <p class="answer">The best place to get help is inside Frontend Mentor's Discord community. There's a help channel where you can ask questions and seek support from other community members.</p>
+      </div>
+    </main>
   </div>
+
+  <footer class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="https://github.com/bea-jpg">Bea</a>.
+  </footer>
 </body>
+
+<!-- javascript -->
+<script src="index.js"></script>
 </html>
